[package]
name = "mdzk"
version = "1.0.0"
authors = [
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Xiangru Lian <admin@mail.xrlian.com>",
]
edition = "2021"
description = "Markdown-based Zettelkasten backend"
homepage = "https://mdzk.app"
repository = "https://github.com/mdzk-rs/mdzk"
readme = "README.md"
license-file = "LICENSE"
include = [
    "Cargo.toml",
    "**/*.rs",
    "**/*.pest",
]

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.6", default-features = false, features = ["std", "derive"] }
gray_matter = "0.2.2"
ignore = "0.4.18"
jql = { version = "3.1.3", default-features = false }
pest = "2.1.3"
pest_derive = "2.1.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"

[features]
test = []

[dev-dependencies]
mdzk = { path = ".", features = ["test"] }

[profile.release]
lto = true
codegen-units = 1
