[package]
name = "mdzk"
version = "1.0.0"
authors = [
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Xiangru Lian <admin@mail.xrlian.com>",
]
edition = "2021"
description = "Markdown-based Zettelkasten backend"
homepage = "https://mdzk.app"
repository = "https://github.com/mdzk-rs/mdzk"
readme = "README.md"
license-file = "LICENSE"
include = [
    "Cargo.toml",
    "**/*.rs",
    "**/*.pest",
]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.9", default-features = false, features = ["std", "derive"] }
fnv = "1.0.7"
gray_matter = "0.2.2"
ignore = "0.4.18"
jql = { version = "4.0.1", default-features = false }
lazy_static = { version = "1.4.0" }
nohash-hasher = "0.2.0"
pest = "2.1.3"
pest_derive = "2.1.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
rayon = "1.5.2"
sailfish = { version = "0.4.0", optional = true }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
time = { version = "0.3.9", default-features = false, features = ["formatting", "local-offset", "macros", "parsing"] }
toml = { version = "0.5.9", optional = true }

[features]
default = ["ssg"]
ssg = ["sailfish", "toml"]
test = []

[dev-dependencies]
mdzk = { path = ".", features = ["test"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
