[package]
name = "mdzk"
version = "1.0.0"
authors = [
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Victor Freire <victor@freire.dev.br>",
]
edition = "2021"
description = "CLI and library for querying connected notes"
homepage = "https://mdzk.app"
repository = "https://github.com/mdzk-rs/mdzk"
readme = "README.md"
license-file = "LICENSE"
include = ["Cargo.toml", "**/*.rs"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.56"
clap = { version = "4.2.2", default-features = false, features = [
    "derive",
    "help",
    "std",
    "usage",
] }
fnv = "1.0.7"
gray_matter = "0.2.6"
ignore = "0.4.20"
jql = { version = "5.2.0", default-features = false }
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
    "simd",
] }
rayon = "1.7.0"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
