[package]
name = "mdbook-backlinks"
authors = [
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Knut Magnus Aasrud <km@aasrud.com>"
]
description = "A preprocessor for mdbook that automatically adds backlinks to each chapter."
# homepage = "https://github.com/mdzk-rs/mdbook-backlinks"
# repository = "https://github.com/mdzk-rs/mdbook-backlinks"
version = "0.2.3"
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
lazy-regex = "2.2.1"
mdbook = "0.4.12"
pathdiff = "0.2.0"
regex = "1.5.4"
semver = "1.0.3"
serde_json = "1.0.64"
toml = "0.5.8"