[package]
name = "mdbook-frontmatter"
description = "Support for frontmatter on mdBook."
version = "0.0.3"
authors = [
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Xiangru Lian <admin@mail.xrlian.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
gray_matter = "0.2.1"
lazy-regex = "2.2.1"
mdbook = "0.4.12"
semver = "1.0.3"
serde = "1.0.123"
serde_json = "1.0.64"
