[package]
name = "mdbook-wikilinks"
description = "Support for wikilinks on mdBook."
version = "0.3.5"
authors = [
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Xiangru Lian <admin@mail.xrlian.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.3"
lazy-regex = "2.2.1"
maud = "0.22.2"
mdbook = "0.4.12"
pathdiff = "0.2.0"
regex = "1.5.4"
serde = "1.0.123"
serde_json = "1.0.64"
urlencoding = "2.0.0"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.4"
