[package]
name = "mdbook-wikilinks"
description = "Support for wikilinks on mdBook."
version = "0.4.0"
authors = [
    "Victor Freire <victor@freire.dev.br>",
    "Leo Silva Souza <leovano@protonmail.com>",
    "Knut Magnus Aasrud <km@aasrud.com>",
    "Xiangru Lian <admin@mail.xrlian.com>",
]
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
    "**/*.rs",
    "**/*.pest",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.3"
mdbook = "0.4.12"
pathdiff = "0.2.0"
pest = "2.1"
pest_derive = "2.1"
serde = "1.0.123"
serde_json = "1.0.64"
pulldown-cmark = "0.8.0"
